ログインフォームのレイアウト変更

--- a/accounts/static/accounts/css/style_login.css
+++ b/accounts/static/accounts/css/style_login.css
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 body {
-  background: #456;
+  background-color: #456;
+  background: url("/static/images/Deeparture_orig.jpeg") no-repeat rgba(0, 0, 0, 0.75);
+  background-blend-mode: multiply;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -12,6 +14,14 @@ body {
   font-size: 16px;
 }
 
+.Lets_message{
+  width: 70%;
+  font-size: 40px;
+  font-weight: bold;
+  color: #fafafa;
+  text-align: center;
+  margin: 90px auto 35px auto;
+}
 /* Reset top and bottom margins from certain elements */
 .login-header,
 .login-container p,
@@ -21,19 +31,9 @@ body {
   margin-bottom: 0;
 }
 
-/* The triangle form is achieved by a CSS hack */
-.login-triangle,
-.signup-triangle {
-  width: 0;
-  margin-right: auto;
-  margin-left: auto;
-  border: 12px solid transparent;
-  border-bottom-color: #28d;
-}
-
 .login-header,
 .signup-header {
-  background: #28d;
+  background: #288;
   padding: 20px;
   font-size: 1.4em;
   font-weight: normal;
@@ -82,7 +82,7 @@ body {
 
 .login input[type="submit"],
 .signup input[type="submit"] {
-  background: #28d;
+  background: #288;
   border-color: transparent;
   color: #fff;
   cursor: pointer;
@@ -90,7 +90,7 @@ body {
 
 .login input[type="submit"]:hover,
 .signup input[type="submit"]:hover {
-  background: #17c;
+  background: #299;
 }
 
 /* Buttons' focus effect */
@@ -107,13 +107,13 @@ body {
 }
 
 .form-footer a {
-  color: #17c;
+  color: #ddd;
   text-decoration: none;
   transition: border-color 0.3s;
 }
 
 .form-footer a:hover {
-  border-bottom: 1px dotted #28d;
+  border-bottom: 1px dotted #aaa;
 }
 
 .errorlist {
